--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,12 @@
 {
-  "functions": "api/**/*.js"
+  "functions": {
+    "api/test.js": {
+      "memory": 3008,
+      "maxDuration": 30
+    },
+    "api/*.js": {
+      "memory": 3008,
+      "maxDuration": 30
+    }
+  }
 }
