--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start": "react-scripts start --port 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "vercel-build": "echo hello"
   },
   "eslintConfig": {
     "extends": [
