--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "functions": {
-    "api/test.js": {
-      "memory": 3008,
-      "maxDuration": 30
-    },
-    "api/*.js": {
-      "memory": 3008,
-      "maxDuration": 30
-    }
-  }
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
