--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start --port 3000",
-    "build": "react-scripts build",
+    "build": "react-scripts build --output public",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "vercel-build": "echo hello"
